tests/files/ok/GenericArrayReturn.krna


interface S<T> {
    pub fn f<T>(self) -> [T]
}