tests/files/fail/ImportFunctionInterface.krna


fn f(a: fn(string) -> string impl int) {}